corrigindo locais de arquivos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         body{
             margin: 0;
-            background-image: url("../res/background-page-tile.png");
+            background-image: url("res/background-page-tile.png");
         }
 
         #banner{
@@ -126,7 +126,7 @@
 
         #img-container{
             display: none;
-            background-image: url("../res/prof_emanoela.png");
+            background-image: url("res/prof_emanoela.png");
             background-repeat: no-repeat;
             background-position: bottom 0 left 0;
             background-size: 100px 100px;
@@ -204,9 +204,9 @@
 </head>
 <body onscroll="bannerUpdate()" >
     <header id="banner">
-        <a id="logo" href="../html/index.html">
+        <a id="logo" href="index.html">
             <div id="logo-container">
-                <img src="../res/logo.png" alt="Logo do site da professora emanoela">
+                <img src="res/logo.png" alt="Logo do site da professora emanoela">
             </div>
             <div id="title-conteiner">
                 <h1>Professora Emanoela</h1>
