Apresentando em tela itens selecionados por alunos para o museu virtual da escola CRN

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <section>
-        <article>
+       <article>
             <h2>Museu da escola CRN</h2>
             <p> A seguir você poderá visitar os museus virtuais construidos por alunos do 6º e 7º ano
                 da escola CRN.
@@ -35,57 +35,47 @@
 
             <article>
                 <header>
-                    <h3>Museu do 7 ano A</h3>
+                    <h3>Museu do 6º ano "A"</h3>
                 </header>
                 <div class="description">
-                    <p>Mostruário do museu costruido pelo 7º Ano ALorem ipsum dolor sit amet, consectetur adipiscing 
-                        elit. Duis id iaculis erat. Mauris a euismod magna. Maecenas sem eros, pulvinar id sem eget, 
-                        congue placerat felis. Mauris risus justo, malesuada in faucibus id, faucibus congue nisl. 
-                        Morbi sed risus molestie, dictum nunc eu, mollis metus. Aliquam hendrerit diam eget dolor 
-                        posuere tristique. Phasellus vulputate congue pulvinar. Aliquam nibh ex, consequat sit amet 
-                        ex vestibulum, blandit ullamcorper ligula. Integer faucibus, lorem eget vestibulum faucibus, 
-                        libero diam volutpat erat, vel feugiat felis turpis eget nibh.
-                    </p>
+                    <p><a href="museums/sixth/a.html">Clique aqui</a> para visualizar os itens selecionados pelos alunos do 6º Ano "A"</p>
                 </div>
             </article>
 
             <article>
                 <header>
-                    <h3>Museu do 7 ano A</h3>
+                    <h3>Museu do 6º ano "D"</h3>
                 </header>
                 <div class="description">
-                    <p>Mostruário do museu costruido pelo 7º Ano ALorem ipsum dolor sit amet, consectetur adipiscing 
-                        elit. Duis id iaculis erat. Mauris a euismod magna. Maecenas sem eros, pulvinar id sem eget, 
-                        congue placerat felis. Mauris risus justo, malesuada in faucibus id, faucibus congue nisl. 
-                        Morbi sed risus molestie, dictum nunc eu, mollis metus. Aliquam hendrerit diam eget dolor 
-                        posuere tristique. Phasellus vulputate congue pulvinar. Aliquam nibh ex, consequat sit amet 
-                        ex vestibulum, blandit ullamcorper ligula. Integer faucibus, lorem eget vestibulum faucibus, 
-                        libero diam volutpat erat, vel feugiat felis turpis eget nibh.
-                    </p>
+                    <p><a href="museums/sixth/d.html">Clique aqui</a> para visualizar os itens selecionados pelos alunos do 6º Ano "D"</p>
                 </div>
             </article>
 
             <article>
                 <header>
-                    <h3>Museu do 7 ano A</h3>
+                    <h3>Museu do 6º ano "E"</h3>
                 </header>
                 <div class="description">
-                    <p>Mostruário do museu costruido pelo 7º Ano ALorem ipsum dolor sit amet, consectetur adipiscing 
-                        elit. Duis id iaculis erat. Mauris a euismod magna. Maecenas sem eros, pulvinar id sem eget, 
-                        congue placerat felis. Mauris risus justo, malesuada in faucibus id, faucibus congue nisl. 
-                        Morbi sed risus molestie, dictum nunc eu, mollis metus. Aliquam hendrerit diam eget dolor 
-                        posuere tristique. Phasellus vulputate congue pulvinar. Aliquam nibh ex, consequat sit amet 
-                        ex vestibulum, blandit ullamcorper ligula. Integer faucibus, lorem eget vestibulum faucibus, 
-                        libero diam volutpat erat, vel feugiat felis turpis eget nibh.
-                    </p>
+                    <p><a href="museums/sixth/e.html">Clique aqui</a> para visualizar os itens selecionados pelos alunos do 6º Ano "E"</p>
                 </div>
             </article>
+
+            
+            <article>
+                <header>
+                    <h3>Museu do 7º ano "A"</h3>
+                </header>
+                <div class="description">
+                    <p><a href="museums/seventh/a.html">Clique aqui</a> para visualizar os itens selecionados pelos alunos do 7º Ano "A"</p>
+                </div>
+            </article>
+
         </article>
 
         <aside>
             <header><h3>Quem sou eu?</h3></header>
             <div class="description" id="about-me">
-                <div id="img-container"></div>
+                <div id="img-container-prof-emanoela"></div>
                 
                 <p>Professora Emanoela Carolaine formada em licenciatura plena em letras/inglês pela 
                     Universidade Federal Rural de Pernambuco (UFRPE) na Unidade Acadêmica de Serra Talhada (UAST).
