Introdução de botões de navegação, contato e correções de textos

--- a/museums/seventh/c.html
+++ b/museums/seventh/c.html
@@ -5,7 +5,7 @@
     <title>Prof. Emanoela</title>
     <meta charset="UFT-8">
     <meta name="author" content="Wânderson Pereira"> 
-    <meta name="description" content="Museu virtual do 6º Ano 'E' da escola Cicero Rabelo Nogueira Manaíra-PB ">
+    <meta name="description" content="Museu virtual do 7º Ano 'C' da escola Cicero Rabelo Nogueira Manaíra-PB ">
     <meta name="keywords" content="aula, tutoria, Professora Emanoela, materiais de aula, museu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -32,12 +32,11 @@
                 <p id="museum-description"></p>
                 <p>Todos os museus virtuais:</p>
                 <nav class="nav-body">
-                    <a href="a.html">6º ano "A"</a>
-                    <a href="d.html">6º ano "D"</a>
-                    <a class="a-current" href="e.html">6º ano "E"</a>
-                    <a href="../seventh/c.html" >7º ano "C"</a>
+                    <a href="../sixth/a.html">6º ano "A"</a>
+                    <a href="../sixth/d.html">6º ano "D"</a>
+                    <a href="../sixth/e.html">6º ano "E"</a>
+                    <a class="a-current" href="c.html" >7º ano "C"</a>
                 </nav>
-            </header>
             </header>
         </article>
 
