--- a/museums/sixth/d.html
+++ b/museums/sixth/d.html
@@ -5,7 +5,7 @@
     <title>Prof. Emanoela</title>
     <meta charset="UFT-8">
     <meta name="author" content="Wânderson Pereira"> 
-    <meta name="description" content="Museu do 6º Ano 'D' da escola Cicero Rabelo Nogueira Manaíra-PB ">
+    <meta name="description" content="Museu virtual do 6º Ano 'D' da escola Cicero Rabelo Nogueira Manaíra-PB ">
     <meta name="keywords" content="aula, tutoria, Professora Emanoela, materiais de aula, museu">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -30,25 +30,50 @@
             <header>
                 <h2 id="museum-title"></h2>
                 <p id="museum-description"></p>
+                <p>Todos os museus virtuais:</p>
+                <nav class="nav-body">
+                    <a href="a.html">6º ano "A"</a>
+                    <a class="a-current" href="d.html">6º ano "D"</a>
+                    <a href="e.html">6º ano "E"</a>
+                    <a href="../seventh/c.html" >7º ano "C"</a>
+                </nav>
             </header>
         </article>
 
         <aside>
-            <header><h3>Quem sou eu?</h3></header>
-            <div class="description" id="about-me">
-                <div id="img-container-prof-emanoela"></div>
-                
-                <p>Professora Emanoela Carolaine formada em licenciatura plena em letras/inglês pela 
-                    Universidade Federal Rural de Pernambuco (UFRPE) na Unidade Acadêmica de Serra Talhada (UAST).
-                    Atualmente, atuo como professora de língua portuguêsa em turmas de sextos e sétimos ano na Escola
-                    Cicero Rabeiro Nogueira em Manaíra-PB
-                </p>
-            </div>
+            <article>
+                <header><h3>Quem sou eu?</h3></header>
+                <div id="about-me">
+                    <div id="img-container-prof-emanoela"></div>
+                    <p> 
+                        Atualmente, atuo como professora de língua portuguêsa em turmas de sextos e sétimos ano na Escola 
+                        Cicero Rabeiro Nogueira em Manaíra-PB. Foi Professora no Centro Universitário -UNIPLAN, atuando 
+                        no curso de Pedagogia. Formada em Licenciatura Plena em Letras - habilitação Português/Inglês - 
+                        pela Universidade Federal Rural de Pernambuco - Unidade Acadêmica de Serra Talhada. Foi bolsista, de  
+                        agosto de 2016 a fevereiro de 2018, do Programa Institucional de Bolsa de Iniciação à Docência 
+                        (PIBID/UFRPE) e, de agosto de 2018 a maio de 2019, do Programa Residência Pedagógica (PRP/UFRPE), nos  
+                        quais desenvolveu projetos de ensino nas áreas de língua portuguesa, língua inglesa e suas respectivas 
+                        literaturas. Tem realizado pesquisas na área de Literatura, sobretudo no seguinte tema: representação 
+                        ficcional da mulher em contos e romances, de autoria feminina ou masculina. Habilitada como 
+                        Professora do Ensino Infantil e das cincos primeiras séries do Ensino Fundamental, pelo curso 
+                        Formação de Professores na modalidade médio normal, na Escola Normal Estadual Monsenhor Sebastião 
+                        Rabêlo (2013).
+                    </p>
+                </div>
+                <p>Para saber mais:</p>
+                <div class="links">
+                    <a href="https://www.instagram.com/emanoelacarolaine" target="_blank"> 
+                        <img  tittle="Instagram" src="../../res/instagram-Icon.png" alt="Instagram" >
+                    </a>
+                    <a href="http://lattes.cnpq.br/5038462090721506" target="_blank">
+                        <img tittle="Curriculo lattes" src="../../res/icon-lattes.png" alt="Curriculo lattes">
+                    </a>
+                </div>
+            </article>
         </aside>
-
     </section>
     <footer>
-        <p>Desenvolvido por <a href="https://wanderson100v.github.io/">Wânderson Pereira</a></p>
+        <p>Desenvolvido por <a href="https://github.com/wanderson100v" target="_blank" >Wânderson Pereira</a></p>
     </footer>
     <script src="../load_museum_itens.js"></script>
 </body>
