--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </p>
             </header>
 
-            <p>Escolha um dos muuseus virtuais:</p>
+            <p>Escolha um dos museus virtuais:</p>
             <nav class="nav-body">
                 <a href="museums/sixth/a.html">6º ano "A"</a>
                 <a href="museums/sixth/d.html">6º ano "D"</a>
