correções de texto

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
                 <div id="about-me">
                     <div id="img-container-prof-emanoela"></div>
                     <p> 
-                        Atualmente, atuo como professora de língua portuguêsa em turmas de sextos e sétimos ano na Escola 
-                        Cicero Rabeiro Nogueira em Manaíra-PB. Foi Professora no Centro Universitário -UNIPLAN, atuando 
-                        no curso de Pedagogia. Formada em Licenciatura Plena em Letras - habilitação Português/Inglês - 
-                        pela Universidade Federal Rural de Pernambuco - Unidade Acadêmica de Serra Talhada. Foi bolsista, de  
+                        Atualmente, atuo como professora de língua portuguesa em turmas de sexto e sétimo ano na Escola 
+                        Cicero Rabelo Nogueira em Manaíra-PB. Fui Professora no Centro Universitário-UNIPLAN, atuando 
+                        no curso de Pedagogia. Sou formada em Licenciatura Plena em Letras - habilitação Português/Inglês - 
+                        pela Universidade Federal Rural de Pernambuco - Unidade Acadêmica de Serra Talhada. Fui bolsista, de  
                         agosto de 2016 a fevereiro de 2018, do Programa Institucional de Bolsa de Iniciação à Docência 
                         (PIBID/UFRPE) e, de agosto de 2018 a maio de 2019, do Programa Residência Pedagógica (PRP/UFRPE), nos  
-                        quais desenvolveu projetos de ensino nas áreas de língua portuguesa, língua inglesa e suas respectivas 
-                        literaturas. Tem realizado pesquisas na área de Literatura, sobretudo no seguinte tema: representação 
-                        ficcional da mulher em contos e romances, de autoria feminina ou masculina. Habilitada como 
+                        quais desenvolvi projetos de ensino nas áreas de língua portuguesa, língua inglesa e suas respectivas 
+                        literaturas. Tenho realizado pesquisas na área de Literatura, sobretudo no seguinte tema: representação 
+                        ficcional da mulher em contos e romances, de autoria feminina ou masculina. Sou habilitada como 
                         Professora do Ensino Infantil e das cincos primeiras séries do Ensino Fundamental, pelo curso 
                         Formação de Professores na modalidade médio normal, na Escola Normal Estadual Monsenhor Sebastião 
                         Rabêlo (2013).
