Postando imagem da Elóa: São Longinho

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </aside>
     </section>
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/wanderson100v" target="_blank">Wânderson Pereira</a></p>
+        <p>Desenvolvido por <a href="https://github.com/wanderson100v" target="_blank">Wânderson Pereira</a> (2021)</p>
     </footer>
 </body>
 </html>
