--- a/museums/seventh/c.html
+++ b/museums/seventh/c.html
@@ -74,7 +74,7 @@
 
     </section>
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/wanderson100v" target="_blank">Wânderson Pereira</a></p>
+        <p>Desenvolvido por <a href="https://github.com/wanderson100v" target="_blank">Wânderson Pereira</a> (2021)</p>
     </footer>
     <script src="../load_museum_itens.js"></script>
 </body>
