--- a/museums/sixth/d.html
+++ b/museums/sixth/d.html
@@ -73,7 +73,7 @@
         </aside>
     </section>
     <footer>
-        <p>Desenvolvido por <a href="https://github.com/wanderson100v" target="_blank" >Wânderson Pereira</a></p>
+        <p>Desenvolvido por <a href="https://github.com/wanderson100v" target="_blank">Wânderson Pereira</a> (2021)</p>
     </footer>
     <script src="../load_museum_itens.js"></script>
 </body>
